# SlopeWatch

./: .gitignore  .pre-commit.yaml  pyproject.toml
src/: watcher.py
src/utils/: video_converter.py
