[tool.poetry]
name = "slopewatch"
version = "0.1.0"
description = ""
authors = ["Kelvin Yeung <kelvin.yeung@faculty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
